# aruco_marker_viz_cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: init_pose.yaml  marker_approach.yaml  marker_map.yaml  marker_viz.yaml
docs/: marker_approach_tuning.md
include/aruco_marker_viz_cpp/: aruco_common.hpp
launch/: init_pose_from_marker.launch.py  marker_approach.launch.py  marker_viz.launch.py
src/: init_pose_from_marker_node.cpp  marker_approach_node.cpp  marker_viz_node.cpp
